modules/securityGroup/secgroup.tf
resource "aws_security_group" "sg_22" { 
	name = "sg_22" 
	vpc_id = var.vpc_id
	ingress { 
		from_port = 22 
		to_port = 22 
		protocol = "tcp" 
		cidr_blocks = ["0.0.0.0/0"] 
	}
	egress { 
		from_port = 0 
		to_port = 0 
		protocol = "-1" 
		cidr_blocks = ["0.0.0.0/0"] 
	} 
	tags = { 
		"Environment" = var.environment_tag 
	} 
}

resource "aws_security_group" "sg_80" { 
	name = "sg_80" 
	vpc_id = var.vpc_id
	ingress { 
		from_port = 80 
		to_port = 80 
		protocol = "tcp" 
		cidr_blocks = ["0.0.0.0/0"] 
	}
	egress { 
		from_port = 0 
		to_port = 0 
		protocol = "-1" 
		cidr_blocks = ["0.0.0.0/0"] 
	} 
	tags = { 
		"Environment" = var.environment_tag 
	} 
}
